fixed projects tree layout, added projects tree expand/collapse functionality, requirements view

--- a/hetaddon/static/addon/stylesheets/main.css
+++ b/hetaddon/static/addon/stylesheets/main.css
@@ -6,6 +6,14 @@
   margin-top: 0 !important;
 }
 
+.ml-0 {
+  margin-left: 0 !important;
+}
+
+.mr-2 {
+  margin-right: 2px !important;
+}
+
 .mt-5 {
   margin-top: 5px !important;
 }
@@ -14,8 +22,16 @@
   margin-bottom: 5px !important;
 }
 
+.pl-7 {
+  padding-left: 7px !important;
+}
+
 .pt-10 {
   padding-top: 10px !important;
+}
+
+.pl-10 {
+  padding-left: 10px !important;
 }
 
 .mb-10 {
